K8S/grafana-loki/base/promtail-deploy.yml
apiVersion: "apps/v1"
kind: "DaemonSet"
metadata:
  name: "loki-promtail"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "loki-promtail"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "loki-promtail"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      serviceAccountName: "loki-promtail"
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 0
        runAsUser: 0
        runAsGroup: 0
      volumes:
        - name: "config"
          configMap:
            name: "promtail-config"
        - name: "logs"
          hostPath:
            path: "/var/log"
      containers:
        - name: "promtail"
          image: "grafana/promtail:latest"
          imagePullPolicy: "IfNotPresent"
          args: ["-config.file=/etc/promtail/promtail.yaml"]
          volumeMounts:
            - name: "config"
              mountPath: "/etc/promtail"
            - name: "logs"
              readOnly: true
              mountPath: "/var/log"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 9080
          resources:
            requests:
              cpu: "100m"
              memory: "120Mi"
            limits:
              cpu: "100m"
              memory: "160Mi"
      nodeSelector:
        kubernetes.io/os: "linux"
      tolerations:
        - operator: "Exists"
