K8S/grafana-loki/base/loki-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "grafana-loki"
  labels:
    app.kubernetes.io/name: "grafana-loki"
spec:
  selector:
    app.kubernetes.io/name: "grafana-loki"
  ports:
    - name: "http"
      port: 3100
      protocol: "TCP"
      targetPort: "http"
